; ModuleID = '/home/carl/AnghaBench/git/extr_environment.c_update_relative_gitdir.c'
source_filename = "/home/carl/AnghaBench/git/extr_environment.c_update_relative_gitdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@trace_setup_key = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"setup: move $GIT_DIR to '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i8*)* @update_relative_gitdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_relative_gitdir(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i32 (...) @get_git_dir()
  %13 = call i8* @reparent_relative_path(i8* %10, i8* %11, i32 %12)
  store i8* %13, i8** %9, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = call i32 @trace_printf_key(i32* @trace_setup_key, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = load i8*, i8** %9, align 8
  %17 = call i32 @set_git_dir_1(i8* %16)
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @free(i8* %18)
  ret void
}

declare dso_local i8* @reparent_relative_path(i8*, i8*, i32) #1

declare dso_local i32 @get_git_dir(...) #1

declare dso_local i32 @trace_printf_key(i32*, i8*, i8*) #1

declare dso_local i32 @set_git_dir_1(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
